fixed overflowing issue :D

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
 /* App Styles */
 .App {
   height: auto;
-  width: 100vh;
+  width: 100%;
 }
 
 /* Body Styles */
